--- a/package.json
+++ b/package.json
@@ -32,5 +32,14 @@
     "ssb-replicate": "^1.3.3",
     "ssb-unix-socket": "^1.0.0",
     "ssb-ws": "^6.2.3"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/metacentre/shipyard-ssb.git"
+  },
+  "bugs": {
+    "url": "https://github.com/metacentre/shipyard-ssb/issues"
+  },
+  "homepage": "https://github.com/metacentre/shipyard-ssb#readme"
 }
