--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@metacentre/shipyard-ssb",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "standard ssb plugins as found in ssb-server",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "ssb-blobs": "^2.0.1",
+    "ssb-db": "^20.4.0",
     "ssb-ebt": "^6.0.0",
     "ssb-friends": "^4.4.5",
     "ssb-gossip": "^1.1.1",
@@ -24,6 +25,7 @@
     "ssb-links": "^3.0.10",
     "ssb-local": "^1.0.0",
     "ssb-logging": "^1.0.0",
+    "ssb-master": "^1.0.3",
     "ssb-no-auth": "^1.0.0",
     "ssb-onion": "^1.0.0",
     "ssb-ooo": "^1.3.3",
